Fixing crew sheet teeth spacing

--- a/styles/css/bitd-alt.css
+++ b/styles/css/bitd-alt.css
@@ -2631,12 +2631,12 @@
 .blades-alt.actor.sheet.crew .crew-upper-frame .character-portrait .stress-trauma-box .stress-bar.full-bar .stripe-tooth-body label,
 .blades-alt.actor.sheet.crew .crew-upper-frame .character-portrait .stress-trauma-box .stress-bar.full-bar .stripe-tooth-body label.radio-toggle {
   display: inline-block;
-  height: 25px;
+  height: 28px;
   width: 10px;
   background-image: url("assets/teeth/xptooth-red.png");
   background-repeat: no-repeat;
   background-size: contain;
-  margin-right: 3px;
+  margin-right: -1px;
   transition: filter 0.1s;
   cursor: pointer;
 }
